--- a/release/src-rt-6.x.4708/linux/linux-2.6.36/net/ipv4/netfilter/Kconfig
+++ b/release/src-rt-6.x.4708/linux/linux-2.6.36/net/ipv4/netfilter/Kconfig
@@ -475,6 +475,23 @@ config IP_NF_TARGET_ROUTE
           Documentation/modules.txt.  The module will be called ipt_ROUTE.o.
           If unsure, say `N'.
 
+config IP_NF_TARGET_TARPIT
+	tristate 'TARPIT target support'
+	depends on IP_NF_FILTER
+	help
+	  Adds a TARPIT target to iptables, which captures and holds
+	  incoming TCP connections using no local per-connection resources.
+	  Connections are accepted, but immediately switched to the persist
+	  state (0 byte window), in which the remote side stops sending data
+	  and asks to continue every 60-240 seconds.  Attempts to close the
+	  connection are ignored, forcing the remote side to time out the
+	  connection in 12-24 minutes.
+	
+	  This offers similar functionality to LaBrea
+	  <http://www.hackbusters.net/LaBrea/> but doesn't require dedicated
+	  hardware or IPs.  Any TCP port that you would normally DROP or REJECT
+	  can instead become a tarpit.
+          
 config IP_NF_MATCH_IPP2P
         tristate  'IPP2P match support'
         depends on IP_NF_IPTABLES
