reverting Makefile, ate.c does not compile for RT-AC5300 anymore

--- a/release/src/router/rc/Makefile
+++ b/release/src/router/rc/Makefile
@@ -704,10 +704,10 @@ ifneq ($(wildcard ./prebuild/ate-broadcom.o),)
 ate-broadcom.o:
 	@-cp -f ./prebuild/ate-broadcom.o .
 endif
-#ifneq ($(wildcard ./prebuild/ate.o),)
-#ate.o:
-#	@-cp -f ./prebuild/ate.o .
-#endif
+ifneq ($(wildcard ./prebuild/ate.o),)
+ate.o:
+	@-cp -f ./prebuild/ate.o .
+endif
 ifeq ($(BUILD_NAME), RT-AC68U)
 ifneq ($(wildcard ./prebuild/cfe.o),)
 cfe.o:
