--- a/release/src/router/rc/Makefile
+++ b/release/src/router/rc/Makefile
@@ -704,9 +704,11 @@ ifneq ($(wildcard ./prebuild/ate-broadcom.o),)
 ate-broadcom.o:
 	@-cp -f ./prebuild/ate-broadcom.o .
 endif
+ifeq ($(BUILD_NAME), RT-AC5300)
 ifneq ($(wildcard ./prebuild/ate.o),)
 ate.o:
 	@-cp -f ./prebuild/ate.o .
+endif
 endif
 ifeq ($(BUILD_NAME), RT-AC68U)
 ifneq ($(wildcard ./prebuild/cfe.o),)
